--- a/src/Components/style/Navbar.css
+++ b/src/Components/style/Navbar.css
@@ -6,7 +6,7 @@
   padding: 1rem;
   gap: 10px;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 
 .Navbar .logo_section {
@@ -27,7 +27,7 @@
   width: 100%;
   height: 15%;
   background-color: blue;
-  z-index: 0;
+  z-index: 3;
 }
 .Navbar_right_section {
   display: grid;
@@ -36,6 +36,9 @@
   gap: 3px;
   margin-right: auto;
   transform: translateY(-5px);
+}
+.Navbar button,a{
+  z-index: 3;
 }
 
 .searchSection{
